<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BBD1EA"
    android:paddingTop="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titletextView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        android:background="#507DBC"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titletextView"
        tools:layout_editor_absoluteX="11dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titletextView"
            app:layout_constraintVertical_bias="0.50">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:orientation="vertical"
                android:padding="10dp"
                android:paddingStart="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    app:helperText="@string/required_field"
                    app:startIconDrawable="@mipmap/baseline_person_black_24dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    app:helperText="@string/required_field"
                    app:startIconDrawable="@mipmap/baseline_email_black_18">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pass_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    app:endIconMode="password_toggle"
                    app:helperText="@string/required_field"
                    app:startIconDrawable="@mipmap/baseline_lock_black_18">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pass_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/repeat_pass_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    app:endIconMode="password_toggle"
                    app:helperText="@string/required_field"
                    app:startIconDrawable="@mipmap/baseline_lock_black_18">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/repeat_pass_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/repeat_password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/gender_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/gender"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/male_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/female_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/female" />
                </RadioGroup>

                <TextView
                    android:id="@+id/hobbies_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="25dp"
                    android:text="@string/hobbies"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp">

                    <CheckBox
                        android:id="@+id/read_check_box"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/read" />

                    <CheckBox
                        android:id="@+id/sport_check_box"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sport" />

                    <CheckBox
                        android:id="@+id/wtite_check_box"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/write" />

                    <CheckBox
                        android:id="@+id/music_check_box"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/music" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp">

                    <TextView
                        android:id="@+id/date_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/data_text_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:inputType="textWebEditText" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="25dp">

                    <TextView
                        android:id="@+id/city_text_layout"
                        android:layout_width="59dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/city"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinner2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>

                <Button
                    android:id="@+id/salve_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="20dp"
                    android:background="@color/Glaucous"
                    android:backgroundTint="@color/Glaucous"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:padding="0dp"
                    android:text="@string/salve"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/info_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#DAE3E5"
                    android:text="@string/info"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="18sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>